--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="Digital marketing & growth solutions for your business."
     />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
