--- a/index.html
+++ b/index.html
@@ -100,6 +100,67 @@
           </li>
         </ul>
       </section>
+
+      <!-- Portfolio section -->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio/card 1.jpg"
+              alt="Project Card 1"
+              width="360"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/card 2.jpg"
+              alt="Project Card 2"
+              width="360"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/card 3.jpg"
+              alt="Project Card 3"
+              width="360"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/card 4.jpg"
+              alt="Project Card 4"
+              width="360"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/card 5.jpg"
+              alt="Project Card 5"
+              width="360"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/card 6.jpg"
+              alt="Project Card 6"
+              width="360"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
