Add color to header and Hero section

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html">
+          <span class="accent">Web</span>Studio</a
+        >
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a class="nav-link" href="#">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a class="nav-link" href="#">Portfolio</a>
           </li>
           <li>
-            <a href="#">Contacts</a>
+            <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -35,9 +37,9 @@
     </header>
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
       <!-- Principles section -->
       <section>
@@ -107,7 +109,7 @@
         <ul>
           <li>
             <img
-              src="./images/portfolio/card 1.jpg"
+              src="./images/portfolio/card1.jpg"
               alt="Project Card 1"
               width="360"
             />
@@ -116,7 +118,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/card 2.jpg"
+              src="./images/portfolio/card2.jpg"
               alt="Project Card 2"
               width="360"
             />
@@ -125,7 +127,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/card 3.jpg"
+              src="./images/portfolio/card3.jpg"
               alt="Project Card 3"
               width="360"
             />
@@ -134,7 +136,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/card 4.jpg"
+              src="./images/portfolio/card4.jpg"
               alt="Project Card 4"
               width="360"
             />
@@ -143,7 +145,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/card 5.jpg"
+              src="./images/portfolio/card5.jpg"
               alt="Project Card 5"
               width="360"
             />
@@ -152,7 +154,7 @@
           </li>
           <li>
             <img
-              src="./images/portfolio/card 6.jpg"
+              src="./images/portfolio/card6.jpg"
               alt="Project Card 6"
               width="360"
             />
