--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
     />
 
     <!-- Styles -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">
-          <span class="logo-accent">Web</span>Studio</a
+        <a class="logo" href="./index.html"
+          >Web <span class="logo-accent-header">Studio</span></a
         >
         <ul>
           <li>
@@ -60,33 +64,32 @@
       </section>
       <!-- Principles section -->
       <section>
-        <!--TODO: hide this title visually -->
-        <h2>Our principles</h2>
+        <h2 class="visually-hidden">Our principles</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="principle-title">Strategy</h3>
+            <p class="principle-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="principle-title">Punctuality</h3>
+            <p class="principle-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="principle-title">Diligence</h3>
+            <p class="principle-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="principle-title">Technologies</h3>
+            <p class="principle-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -94,35 +97,35 @@
         </ul>
       </section>
       <!-- Team section -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="team-section">
+        <h2 class="team-section-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/team/card1.jpg" alt="Team Card 1" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/team/card2.jpg" alt="Team Card 2" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team/card3.jpg" alt="Team Card 3" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/team/card4.jpg" alt="Team Card 4" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
       <!-- Portfolio section -->
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="portfolio-section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -130,8 +133,8 @@
               alt="Project Card 1"
               width="360"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -139,8 +142,8 @@
               alt="Project Card 2"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -148,8 +151,8 @@
               alt="Project Card 3"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -157,8 +160,8 @@
               alt="Project Card 4"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -166,8 +169,8 @@
               alt="Project Card 5"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
@@ -175,15 +178,17 @@
               alt="Project Card 6"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
