--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         >
         <ul>
           <li>
-            <a class="nav-link" href="#">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="./index.html">Portfolio</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="nav-link" href="./index.html">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -100,22 +100,22 @@
       <section class="team-section">
         <h2 class="team-section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-item">
             <img src="./images/team/card1.jpg" alt="Team Card 1" width="264" />
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team/card2.jpg" alt="Team Card 2" width="264" />
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team/card3.jpg" alt="Team Card 3" width="264" />
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/team/card4.jpg" alt="Team Card 4" width="264" />
             <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
