--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         >
         <ul>
           <li>
-            <a class="nav-link" href="./index.html">Studio</a>
+            <a class="nav-link" href="#">Studio</a>
           </li>
           <li>
-            <a class="nav-link" href="./index.html">Portfolio</a>
+            <a class="nav-link" href="#">Portfolio</a>
           </li>
           <li>
-            <a class="nav-link" href="./index.html">Contacts</a>
+            <a class="nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
