--- a/index.html
+++ b/index.html
@@ -31,27 +31,25 @@
         >
         <ul>
           <li>
-            <a class="nav-link" href="#">Studio</a>
+            <a class="nav-link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="">Portfolio</a>
           </li>
           <li>
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a class="address-item" href="mailto:info@devstudio.com"
+            <a class="address" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address-item" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="address" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
