--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
       <address>
         <ul>
           <li>
-            <a class="address" href="mailto:info@devstudio.com"
+            <a class="address-item" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-item" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
