--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="address-item" href="mailto:info@devstudio.com"
